--- a/src/banner/studentForm.form
+++ b/src/banner/studentForm.form
@@ -166,6 +166,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Display All Courses"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
