--- a/src/banner/FacultyForm.form
+++ b/src/banner/FacultyForm.form
@@ -122,6 +122,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="View Course Enrollment"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton9ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
